--- a/posts/2015-11-26 élasticité - scénario montage.ipynb
+++ b/posts/2015-11-26 élasticité - scénario montage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -56,12 +56,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 laurentperrinet  staff   121K Nov 27 14:33 ../mat/line_vague_dense.npy\r\n",
-      "-rw-r--r--  1 laurentperrinet  staff   121K Nov 27 14:34 ../mat/line_vague_solo.npy\r\n",
-      "-rw-r--r--  1 laurentperrinet  staff    21M Nov 27 14:51 ../mat/master.npy\r\n",
-      "-rw-r--r--  1 laurentperrinet  staff   731K Nov 27 15:02 ../mat/line_fresnelastique.npy\r\n",
-      "-rw-r--r--  1 laurentperrinet  staff   731K Nov 27 15:16 ../mat/line_fresnelastique_chirp.npy\r\n",
-      "-rw-r--r--  1 laurentperrinet  staff   731K Nov 27 15:19 ../mat/line_fresnelastique_choc.npy\r\n"
+      "-rw-r--r--  1 laurentperrinet  staff    56M Nov 27 15:34 ../mat/master.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   731K Nov 27 16:11 ../mat/line_fresnelastique.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   731K Nov 27 16:11 ../mat/line_fresnelastique_chirp.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   731K Nov 27 16:11 ../mat/line_fresnelastique_choc.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   104K Nov 27 16:15 ../mat/line_vague_dense.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   119K Nov 27 16:15 ../mat/line_vague_solo.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   731K Nov 27 16:27 ../mat/line_geometry.npy\r\n"
      ]
     }
    ],
