--- a/posts/2015-11-26 élasticité - scénario montage.ipynb
+++ b/posts/2015-11-26 élasticité - scénario montage.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -278,9 +278,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master a3b70bb]  scenario master\r\n",
-      " 3 files changed, 13 insertions(+), 10 deletions(-)\r\n",
-      " rewrite mat/master.npy (69%)\r\n"
+      "[master d0b3962]  scenario master\r\n",
+      " 4 files changed, 7138 insertions(+), 400 deletions(-)\r\n",
+      " rewrite \"posts/2015-11-26 \\303\\251lasticit\\303\\251 - sc\\303\\251nario montage.ipynb\" (91%)\r\n"
      ]
     }
    ],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -299,18 +299,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 7, done.\n",
+      "Counting objects: 8, done.\n",
       "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (7/7), done.\n",
-      "Writing objects: 100% (7/7), 14.06 MiB | 2.00 MiB/s, done.\n",
-      "Total 7 (delta 5), reused 0 (delta 0)\n",
+      "Compressing objects: 100% (8/8), done.\n",
+      "Writing objects: 100% (8/8), 3.97 MiB | 0 bytes/s, done.\n",
+      "Total 8 (delta 6), reused 0 (delta 0)\n",
       "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
-      "   e3fcdc5..a3b70bb  master -> master\n"
+      "   045f1e9..d0b3962  master -> master\n"
      ]
     }
    ],
    "source": [
     "! git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/laurentperrinet/cloud_nas/science/elasticte/posts'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
    ]
   },
   {
