--- a/posts/2015-11-27 élasticité, geometrie.ipynb
+++ b/posts/2015-11-27 élasticité, geometrie.ipynb
@@ -26,6 +26,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## angles perpendiculaires"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
@@ -145,7 +152,6 @@
    ],
    "source": [
     "import matplotlib\n",
-    "matplotlib.use('nbagg')\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -189,7 +195,7 @@
     }
    ],
    "source": [
-    "!git add ../mat\n",
+    "#!git add ../mat\n",
     "!git s"
    ]
   },
@@ -239,15 +245,6 @@
    "source": [
     "! git push"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
