--- a/posts/2015-11-26 élasticité - scénario montage.ipynb
+++ b/posts/2015-11-26 élasticité - scénario montage.ipynb
@@ -123,6 +123,7 @@
     "        ###########################################################################\n",
     "        z = montage(z, z_s['line_onde_solo'])\n",
     "        z = montage(z, revert(z_s['line_onde_solo']))\n",
+    "        z = montage(z, revert(z_s['line_onde_dense']))\n",
     "        ###########################################################################\n",
     "        z = montage(z, z_s['line_fresnelastique'])\n",
     "        z = montage(z, mirror(z_s['line_fresnelastique']))\n",
