--- a/posts/2015-11-29 élasticité - scénario onde.ipynb
+++ b/posts/2015-11-29 élasticité - scénario onde.ipynb
@@ -20615,7 +20615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -20624,17 +20624,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \u001b[32mM\u001b[m \"2015-11-26 \\303\\251lasticit\\303\\251 - sc\\303\\251nario montage.ipynb\"\r\n",
-      " \u001b[32mM\u001b[m \"2015-11-27 \\303\\251lasticit\\303\\251, geometrie.ipynb\"\r\n",
-      " \u001b[32mM\u001b[m \"2015-11-29 \\303\\251lasticit\\303\\251 - sc\\303\\251nario onde.ipynb\"\r\n",
-      "\u001b[36m??\u001b[m ../mat/line_onde_dense.npy\r\n",
-      "\u001b[36m??\u001b[m ../mat/line_onde_solo.npy\r\n",
-      "\u001b[36m??\u001b[m ../scenario_line_onde.py\r\n",
-      "\u001b[36m??\u001b[m ../scenario_line_onde_solo.py\r\n"
+      "\u001b[33mA\u001b[m  ../mat/line_onde_dense.npy\r\n",
+      "\u001b[33mA\u001b[m  ../mat/line_onde_solo.npy\r\n",
+      "\u001b[33mA\u001b[m  ../scenario_line_onde.py\r\n",
+      "\u001b[33mA\u001b[m  ../scenario_line_onde_solo.py\r\n",
+      "\u001b[36m??\u001b[m ../scenario_line_geometry.py\r\n"
      ]
     }
    ],
    "source": [
+    "!git add ../mat/line_onde_* ../scenario_line_onde*\n",
     "!git s"
    ]
   },
