--- a/posts/2015-11-29 élasticité - scénario onde.ipynb
+++ b/posts/2015-11-29 élasticité - scénario onde.ipynb
@@ -20633,13 +20633,13 @@
     }
    ],
    "source": [
-    "!git add ../mat/line_onde_* ../scenario_line_onde*\n",
+    "!git add  ../scenario_line_geometry.py\n",
     "!git s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -20648,9 +20648,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 0e5f002]  scenario onde\n",
-      " 3 files changed, 18716 insertions(+), 23985 deletions(-)\n",
-      " rewrite \"posts/2015-11-29 \\303\\251lasticit\\303\\251 - sc\\303\\251nario onde.ipynb\" (77%)\n"
+      "[master c0572e8]  scenario onde\n",
+      " 5 files changed, 108 insertions(+), 8 deletions(-)\n",
+      " create mode 100644 mat/line_onde_dense.npy\n",
+      " create mode 100644 mat/line_onde_solo.npy\n",
+      " create mode 100644 scenario_line_onde.py\n",
+      " create mode 100644 scenario_line_onde_solo.py\n"
      ]
     }
    ],
@@ -20660,7 +20663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -20669,19 +20672,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 6, done.\n",
+      "Counting objects: 9, done.\n",
       "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (6/6), done.\n",
-      "Writing objects: 100% (6/6), 1.01 MiB | 0 bytes/s, done.\n",
-      "Total 6 (delta 4), reused 0 (delta 0)\n",
+      "Compressing objects: 100% (9/9), done.\n",
+      "Writing objects: 100% (9/9), 755.22 KiB | 0 bytes/s, done.\n",
+      "Total 9 (delta 4), reused 0 (delta 0)\n",
       "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
-      "   d0b3962..0e5f002  master -> master\n"
+      "   4217a69..c0572e8  master -> master\n"
      ]
     }
    ],
    "source": [
     "! git push\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
