--- a/posts/2015-11-29 élasticité - scénario onde.ipynb
+++ b/posts/2015-11-29 élasticité - scénario onde.ipynb
@@ -20633,7 +20633,7 @@
     }
    ],
    "source": [
-    "!git add  ../scenario_line_geometry.py\n",
+    "!git add ../mat/line_onde_* ../scenario_line_onde*\n",
     "!git s"
    ]
   },
