--- a/posts/2015-11-27 élasticité, geometrie.ipynb
+++ b/posts/2015-11-27 élasticité, geometrie.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -326,22 +326,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \u001b[32mM\u001b[m ../mat/line_geometry.npy\r\n",
+      "\u001b[33mA\u001b[m  ../mat/line_geometry_45deg.npy\r\n",
+      " \u001b[32mM\u001b[m ../mat/master.npy\r\n",
+      " \u001b[32mM\u001b[m \"2015-11-26 \\303\\251lasticit\\303\\251 - sc\\303\\251nario montage.ipynb\"\r\n",
       " \u001b[32mM\u001b[m \"2015-11-27 \\303\\251lasticit\\303\\251, geometrie.ipynb\"\r\n",
-      " \u001b[32mM\u001b[m \"2015-11-29 \\303\\251lasticit\\303\\251 - sc\\303\\251nario onde.ipynb\"\r\n",
-      " \u001b[32mM\u001b[m ../scenario_line_geometry.py\r\n"
+      "\u001b[33mA\u001b[m  ../scenario_line_geometry_45deg.py\r\n",
+      " \u001b[32mM\u001b[m ../scenario_line_master.py\r\n",
+      " \u001b[32mM\u001b[m ../src/elasticite.py\r\n"
      ]
     }
    ],
    "source": [
-    "#!git add  ../scenario_line_geometry.py\n",
+    "!git add  ../mat/line_geometry_45deg.npy  ../scenario_line_geometry_45deg.py\n",
     "\n",
     "!git s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 147,
    "metadata": {
     "collapsed": false
    },
@@ -350,20 +353,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 29e2555]  scenario geometry\n",
-      " 4 files changed, 278 insertions(+), 267 deletions(-)\n",
-      " rewrite mat/line_geometry.npy (82%)\n",
-      " rewrite \"posts/2015-11-27 \\303\\251lasticit\\303\\251, geometrie.ipynb\" (92%)\n"
+      "[master 6b3ea36]  scenario geometry  45deg\r\n",
+      " 7 files changed, 864 insertions(+), 641 deletions(-)\r\n",
+      " create mode 100644 mat/line_geometry_45deg.npy\r\n",
+      " rewrite \"posts/2015-11-26 \\303\\251lasticit\\303\\251 - sc\\303\\251nario montage.ipynb\" (91%)\r\n",
+      " rewrite \"posts/2015-11-27 \\303\\251lasticit\\303\\251, geometrie.ipynb\" (90%)\r\n",
+      " create mode 100644 scenario_line_geometry_45deg.py\r\n"
      ]
     }
    ],
    "source": [
-    "!git commit -am' scenario geometry '"
+    "!git commit -am' scenario geometry  45deg '"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 148,
    "metadata": {
     "collapsed": false
    },
@@ -372,13 +377,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 8, done.\n",
+      "Counting objects: 12, done.\n",
       "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (8/8), done.\n",
-      "Writing objects: 100% (8/8), 1.39 MiB | 0 bytes/s, done.\n",
-      "Total 8 (delta 5), reused 0 (delta 0)\n",
+      "Compressing objects: 100% (12/12), done.\n",
+      "Writing objects: 100% (12/12), 34.13 MiB | 8.35 MiB/s, done.\n",
+      "Total 12 (delta 5), reused 0 (delta 0)\n",
       "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
-      "   dc3ac28..29e2555  master -> master\n"
+      "   29e2555..6b3ea36  master -> master\n"
      ]
     }
    ],
