--- a/posts/2015-11-26 élasticité - scénario montage.ipynb
+++ b/posts/2015-11-26 élasticité - scénario montage.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +64,8 @@
       "-rw-r--r--  1 laurentperrinet  staff   416K Nov 30 15:40 ../mat/line_onde_dense.npy\r\n",
       "-rw-r--r--  1 laurentperrinet  staff   416K Nov 30 15:40 ../mat/line_onde_solo.npy\r\n",
       "-rw-r--r--  1 laurentperrinet  staff   1.4M Nov 30 16:11 ../mat/line_geometry.npy\r\n",
-      "-rw-r--r--  1 laurentperrinet  staff    23M Nov 30 16:20 ../mat/master.npy\r\n"
+      "-rw-r--r--  1 laurentperrinet  staff    40M Nov 30 16:28 ../mat/master.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   1.4M Nov 30 16:57 ../mat/line_geometry_45deg.npy\r\n"
      ]
     }
    ],
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -135,37 +136,39 @@
     "    z_s = {}\n",
     "    for scenario in ['line_vague_dense', 'line_vague_solo', \n",
     "                     'line_onde_dense', 'line_onde_solo', 'line_fresnelastique',\n",
-    "                    'line_fresnelastique_choc', 'line_fresnelastique_chirp', 'line_geometry']:\n",
+    "                    'line_fresnelastique_choc', 'line_fresnelastique_chirp', \n",
+    "                     'line_geometry', 'line_geometry_45deg']:\n",
     "        z_s[scenario] = np.load(os.path.join(matpath, scenario + '.npy'))\n",
     "    \n",
     "    ###########################################################################\n",
     "    burnout_time = 4.\n",
     "    z = np.zeros((1, N_lame+1)) # zero at zero\n",
     "    z = np.vstack((z, np.hstack((np.array(burnout_time), np.zeros(N_lame) ))))\n",
-    "    for _ in range(3):\n",
-    "        ###########################################################################\n",
-    "        z = montage(z, z_s['line_onde_dense'])\n",
-    "        ###########################################################################\n",
-    "        z = montage(z, z_s['line_geometry'])\n",
-    "        ###########################################################################\n",
-    "        z = montage(z, z_s['line_onde_solo'])\n",
-    "        z = montage(z, revert(z_s['line_onde_solo']))\n",
-    "        z = montage(z, revert(z_s['line_onde_dense']))\n",
-    "        ###########################################################################\n",
-    "        z = montage(z, z_s['line_geometry'])\n",
-    "        z = montage(z, z_s['line_fresnelastique'])\n",
-    "        z = montage(z, mirror(z_s['line_fresnelastique']))\n",
-    "        z = montage(z, z_s['line_fresnelastique_chirp'])\n",
-    "        z = montage(z, z_s['line_fresnelastique_choc'])\n",
-    "        z = montage(z, z_s['line_geometry'])\n",
-    "        ###########################################################################\n",
-    "        z = montage(z, z_s['line_fresnelastique'])\n",
-    "        z = montage(z, interleave(z_s['line_fresnelastique'], mirror(z_s['line_fresnelastique'])))\n",
-    "        z = montage(z, interleave(z_s['line_fresnelastique_chirp'], mirror(z_s['line_fresnelastique_choc'])))\n",
-    "        z = montage(z, interleave(z_s['line_fresnelastique_choc'], mirror(z_s['line_fresnelastique_chirp'])))\n",
-    "        ###########################################################################\n",
-    "        z = montage(z, z_s['line_geometry'])\n",
-    "        z = montage(z, z_s['line_onde_dense'])\n",
+    "    ###########################################################################\n",
+    "    z = montage(z, z_s['line_onde_dense'])\n",
+    "    ###########################################################################\n",
+    "    z = montage(z, z_s['line_geometry_45deg'])\n",
+    "    z = montage(z, z_s['line_geometry'])\n",
+    "    z = montage(z, mirror(z_s['line_geometry_45deg']))\n",
+    "    ###########################################################################\n",
+    "    z = montage(z, z_s['line_onde_solo'])\n",
+    "    z = montage(z, revert(z_s['line_onde_solo']))\n",
+    "    z = montage(z, revert(z_s['line_onde_dense']))\n",
+    "    ###########################################################################\n",
+    "    z = montage(z, z_s['line_geometry'])\n",
+    "    z = montage(z, z_s['line_fresnelastique'])\n",
+    "    z = montage(z, mirror(z_s['line_fresnelastique']))\n",
+    "    z = montage(z, z_s['line_fresnelastique_chirp'])\n",
+    "    z = montage(z, z_s['line_fresnelastique_choc'])\n",
+    "    z = montage(z, z_s['line_geometry'])\n",
+    "    ###########################################################################\n",
+    "    z = montage(z, z_s['line_fresnelastique'])\n",
+    "    z = montage(z, interleave(z_s['line_fresnelastique'], mirror(z_s['line_fresnelastique'])))\n",
+    "    z = montage(z, interleave(z_s['line_fresnelastique_chirp'], mirror(z_s['line_fresnelastique_choc'])))\n",
+    "    z = montage(z, interleave(z_s['line_fresnelastique_choc'], mirror(z_s['line_fresnelastique_chirp'])))\n",
+    "    ###########################################################################\n",
+    "    z = montage(z, z_s['line_geometry'])\n",
+    "    z = montage(z, z_s['line_onde_dense'])\n",
     "    \n",
     "    ###########################################################################\n",
     "    # save the file\n",
@@ -191,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -208,6 +211,7 @@
    ],
    "source": [
     "%cd ..\n",
+    "!rm\n",
     "%run  scenario_line_master.py writer\n",
     "%cd posts"
    ]
