--- a/posts/2015-11-26 élasticité - scénario montage.ipynb
+++ b/posts/2015-11-26 élasticité - scénario montage.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -176,15 +176,16 @@
     "\n",
     "    for i_frame in range(z.shape[0]):\n",
     "        angle_desire = z[i_frame, 1:]\n",
-    "        dnbpas =  (angle_desire - angle_actuel)/2/np.pi*e.n_pas\n",
+    "        # on transforme en l'angle à faire pour obtenir la bonne position\n",
+    "        d_angle = np.mod((angle_desire - angle_actuel) + np.pi/2, np.pi) - np.pi/2\n",
+    "        # et donc du nombre de pas à faire\n",
+    "        dnbpas =  d_angle/2/np.pi*e.n_pas\n",
     "        # HACK : écrétage pour éviter un overflow\n",
-    "        dnbpas = e.n_pas_max * np.tanh(dnbpas/e.n_pas_max)\n",
+    "        # dnbpas = e.n_pas_max * np.tanh(dnbpas/e.n_pas_max)\n",
     "        # on convertit en int\n",
     "        dnbpas = dnbpas.astype(np.int)\n",
-    "        # print(e.lames[2, :N_lame], angle_desire, angle_actuel, dnbpas)\n",
     "        angle_actuel = angle_actuel + dnbpas*2*np.pi/e.n_pas\n",
     "        angle_actuel = np.mod(angle_actuel + np.pi/2, np.pi) - np.pi/2\n",
-    "        # if e.verb: print('@', e.t, convert(dnbpas), '-fps=', 1./e.dt)\n",
     "        for i, increment in enumerate(dnbpas):\n",
     "            if np.abs(increment) > e.n_pas_max:\n",
     "                print('!! /Z\\ !! @ ', i_frame, ' overflow @ ', i, increment)\n",
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -223,6 +224,14 @@
      "output_type": "stream",
      "text": [
       "/Users/laurentperrinet/cloud_nas/science/elasticte\n",
+      "!! /Z\\ !! @  15615  overflow @  4 240\n",
+      "!! /Z\\ !! @  15895  overflow @  4 -2183\n",
+      "!! /Z\\ !! @  36159  overflow @  4 239\n",
+      "!! /Z\\ !! @  36439  overflow @  4 -2183\n",
+      "!! /Z\\ !! @  57759  overflow @  4 239\n",
+      "!! /Z\\ !! @  58039  overflow @  4 -2183\n",
+      "!! /Z\\ !! @  79359  overflow @  4 239\n",
+      "!! /Z\\ !! @  79639  overflow @  4 -2183\n",
       "/Users/laurentperrinet/cloud_nas/science/elasticte/posts\n"
      ]
     }
@@ -284,6 +293,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## utile"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {
@@ -326,6 +342,31 @@
     "print (smooth)\n",
     "fig, ax = plt.subplots(figsize=(15, 3))\n",
     "_ = ax.plot(time, smooth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAA3YAAADICAYAAACkhXMVAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3W2sdWV9oPHr/7y1VTsEfHlqQbARq9V+QD4wNqZ11w4i\nxhQcTQudidWOjnFKa6OZiKMN55n2g/rBZHwLWqnRKYZxxqJo1QHrnDZMUyUqFRT0sRUEBqmtYkdt\np8/LPR/2ObA5nH32y3q773Vfv4Rwzj6bvZbmv++1rr33OidSSkiSJEmSyrVv6B2QJEmSJDVj2EmS\nJElS4Qw7SZIkSSqcYSdJkiRJhTPsJEmSJKlwhp0kSZIkFa5x2EXEGRHxmYj4ckTcEhG/Ped+b4uI\noxFxc0Sc03S7kiRJkqSpAy08xnHgNSmlmyPiUcDnI+L6lNLt23eIiAuBJ6WUnhwR/xK4EnhmC9uW\nJEmSpOo1fscupfStlNLNW19/H7gNOH3H3S4CPrB1n88Cp0TE4abbliRJkiS1fI1dRDwROAf47I4f\nnQ7cNfP9PTw8/iRJkiRJa2jjo5gAbH0M838Ar956527dx0lt7ZMkSZIklSilFKvcv5Wwi4gDTKPu\nv6aUPrrLXe4BnjDz/Rlbt+0qJdtOWtfGxgYbGxtD74ZULJ9DUjM+h6TmIlZqOqC9j2L+IfCVlNJ/\nmfPz64CXAETEM4H7U0r3tbRtSZIkSapa43fsIuJZwL8BbomILwIJ+E/AWUBKKb0npfSJiHh+RHwd\n+AHwsqbblSRJkiRNNQ67lNL/BvYvcb/Lmm5L0mKTyWToXZCK5nNIasbnkDSMyO16tohIue2TJEmS\nJPUlIlb+5Smt/rkDSZIkSVL/DDtJkiRJKpxhJ0mSJEmFM+wkSZIkqXCGnSRJkiQVzrCTJEmSpMIZ\ndpIkSZJUOMNOkiRJkgpn2EmSJElS4Qw7SZIkSSqcYSdJkiRJhWsl7CLiqoi4LyK+NOfnz46I+yPi\nC1v/vLGN7UqSJEmS2nvH7n3ABQvu8+cppXO3/vn9lrYrSZJalNLQe6BcpAR//Mdw4sTQe6Ic3Hor\n/PzPwz//89B7onlaCbuU0o3AdxfcLdrYlqTm/umf4PjxofdCOUgJrroK7r136D1RDo4ehbPPhttv\nH3pPNLSU4DWvgRe9CL7xjaH3RkO79VY4/3z4i7+AH/5w6L3RPH1eY/dzEXFzRPxJRDytx+0KuPJK\n2Nwcei+UgzvvhKc9DT70oaH3RENLCa64Al7+cvjc54beGw3t6FF4znPg29+Gv/u7ofdGQ9qOuhtv\nhDPOgGPHht4jDWk76t76VjjtNOchZwd62s7ngTNTSj+MiAuBjwA/Pe/OGxsbD3w9mUyYTCZd79+o\nvfnNcPnl8Hu/B/5fWbc774Rf/MXpxyj+4R+G3hsNaTvqrr0Wnv1sD9S12466K66Aq6/2o1Y1m426\n66+HX/gF14eazUbdpZfCa1/rPHRlc3OTzYbvwvQSdiml7898/cmIeFdEnJZS+s5u958NOzXz5jfD\ne987fUXeJ2LdtqPu1a+ensQ5D/Wajbo//VP4nd/xRL5ms1H38pdP3813fajTzqg79VQ4eNB5qNXO\nqAPnoUs738w6cuTIyo/R5kcxgznX0UXE4ZmvzwNiXtSpPdtRt7kJT3yiT8SazUbdq1/twlyznVH3\nuMc5DzXbGXXgPNRqt6gD56FWu0UdwKFDvhCYs1besYuIDwIT4NER8U3gCuAQkFJK7wFeHBGvAo4B\n/wj8ahvb1XyzUXf66S7MNdsZdeDCXKvdog5cH2q1W9SB81CjeVEHHi9qNC/qwPUhd62EXUrp1xb8\n/J3AO9vYlhbbGXXgwlyr3aIOXJhrNC/qwHmo0byoA48Xtdkr6sD1oTZ7RR04D7nr87diqge7RR34\nRKzRvKgD56E2e0UdTOfBE/l67BV14PpQk0VRB85DTRZFHTgPuTPsRmRe1IFPxNrsFXXgPNRkUdTB\n9B0a56EOi6IOXB9qsUzUgfNQi2WiDnxHP3eG3UjsFXXgwlyTRVEHLsy1WCbqwPWhFstEHTgPNVg2\n6sDjRQ2WjTpwfcidYTcCi6IOXJhrsUzUgQtzDZaNOnAearBs1IHHi7FbJerA9WHsVok6cB5yZ9gV\nbpmoA5+INVg26sB5GLtVog68xm7sVok6cH0Ys1WjDpyHMVs16sB5yJ1hV7Blow58Io7dKlEHzsOY\nrRp14DV2Y7Zq1IHrw1itE3XgPIzVOlEHvqOfO8OuUKtEHbgwj9mqUQcuzGO1TtSB68NYrRN14DyM\n0bpRBx4vxmjdqAPXh9wZdgVaNerAhXms1ok6cGEeo3WjDpyHMVo36sB5GJsmUQfOw9g0iTpwHnJn\n2BVmnagDn4hjtG7UgfMwNk2iDrzGbmyaRB34QuCYNI068HgxJk2jDpyH3Bl2BVk36sAn4tg0iTpw\nHsakadSB19iNSdOoA9eHsWgj6sB5GIs2og584Sd3hl0hmkQduDCPSdOoAxfmsWgj6sD1YSzaiDpw\nHsagragDjxdj0FbUgetD7gy7AjSNOnBhHos2og5cmMegragD52EM2oo6cB5K12bUgfNQujajDpyH\n3LUSdhFxVUTcFxFf2uM+b4uIoxFxc0Sc08Z2a9BG1IFPxDFoK+rAeShdm1EHXmNXujajDnwhsGRt\nRx14vChZ21EHzkPu2nrH7n3ABfN+GBEXAk9KKT0ZeCVwZUvbHbW2og58IpauzagD56FkbUcdeI1d\nydqOOnB9KFUXUQfOQ6m6iDrwhZ/ctRJ2KaUbge/ucZeLgA9s3fezwCkRcbiNbY9Vm1EHLswlazvq\nwIW5VF1EHbg+lKqLqAPnoURdRR04DyXqKurAechdX9fYnQ7cNfP9PVu3aRdtRx34UatSdRF14MJc\noq6iDpyHEnUVdeA8lKbLqANfCCxNl1EHrg+5OzD0DuxmY2Pjga8nkwmTyWSwfelbF1EHftSqRF1F\nHbgwl6bLqANf+ClNl1EHnsiXpOuoA48XJek66mA6Dz/4QTePXbvNzU02NzcbPUZfYXcP8ISZ78/Y\num1Xs2FXk66iDlyYS9Nl1IHzUJKuow584ackXUcduD6Uoo+oA+ehFH1EHfhCYJd2vpl15MiRlR+j\nzY9ixtY/u7kOeAlARDwTuD+ldF+L2y5el1EHLswl6TrqwFfkS9FH1IHrQyn6iDpwHkrQV9SB81CC\nvqIOfCEwd628YxcRHwQmwKMj4pvAFcAhIKWU3pNS+kREPD8ivg78AHhZG9sdi66jDlyYS9FH1IHz\nUIK+og6chxL0FXXgPOSuz6gDXwjMXZ9RB64PuWsl7FJKv7bEfS5rY1tj00fUwYNvnacEMe99VQ2q\nr6gDF+bc9Rl14Edrctdn1IEn8jnrO+rA40XO+o46cB5y19dvxdQu+oo6gP37Yd8+OHGi2+1oPX1G\nHbgw56zvqAM/WpOzvqMOXB9yNUTUgfOQqyGiDnwhMHeG3UD6jLptLs556jvqwFnI1RBRB85DroaI\nOnAecjRU1IHzkKOhog58ITB3ht0Ahog6cHHO0RBRB37UKkdDRR24NuRoqKgD5yE3Q0YdeLzIzZBR\nB64PuTPsejZU1IGLc26GijqYLszHj09PGDS8IaMO/GhNboaMOvBYkZOhow48kc/J0FEHzkPuDLse\nDRl14JMxJ0NGHUx/gc7+/dO407CGjjpwbcjJ0FEHzkMucog6cB5ykUPUgS8E5s6w68nQUQcuzrkY\nOuq2OQ/DyyHqwGsmcpFD1IFrQw5yiTpwHnKQS9SBx4vcGXY9yCHqwMU5B7lEHfhxq6HlEnXg2pCD\nXKIOnIeh5RR14LFiaDlFHbg+5M6w61guUQcuzkPLKerAxXlIOUUdTD+We+IEnDw57H7UKqeoA48V\nQ8ot6sBjxZByizpwHnJn2HUop6gDn4xDyi3qwHkYSm5RB9NrLp2HYeQWdeAsDCXHqAPnYSg5Rh14\njV3uDLuO5BZ14OI8lByjDpyHIeQYddu8bqJ/OUYduDYMIdeoA+dhCLlGHXisyJ1h14Ecow5cnIeQ\na9SBH7fqW85RB64Pfcs16sBZ6FvOUQceK/qWc9SB60PuDLuW5Rp14OLct5yjDlyc+5R71IEfr+lT\nzlEH02suYXrdpbqVe9SBx4o+5R514DzkrpWwi4jnRcTtEfG1iHjdLj9/dkTcHxFf2PrnjW1sNzc5\nRx34ZOxT7lEHzkNfSog6cB76knvUbfOFwO6VEHXg2tCXEqIOfBEwdweaPkBE7APeAfwS8H+AmyLi\noyml23fc9c9TSr/cdHu5yj3qwMW5LyVEHTgPfSgl6sDrJvpQStTBg+vDj/3Y0HsyTqVEHXis6EMp\nUQceK3LXxjt25wFHU0p3ppSOAdcAF+1yv2hhW1kqIerAxbkPpUQd+Ip810qKOnB96FpJUQfOQ5dK\nijp4cBZSGnpPxqmkqAPXhty1EXanA3fNfH/31m07/VxE3BwRfxIRT2thu1koJerAE/mulRR14OLc\npdKiDpyHLpUWdeA8dKW0qAPYt2963eXx40PvyfiUFnXg2pC7xh/FXNLngTNTSj+MiAuBjwA/Pe/O\nGxsbD3w9mUyYTCZd799aSoo68MnYpdKiDpyHrpQYdeB1E10pMerAFwK7UGLUbds+Xhw8OPSejEeJ\nUQceK7q0ubnJ5uZmo8doI+zuAc6c+f6MrdsekFL6/szXn4yId0XEaSml7+z2gLNhl6vSog48ke9K\niVEHzkMXSo068LqJLpQadeD60LaSow6ch7aVGnXgsaJLO9/MOnLkyMqP0cZHMW8Czo6IsyLiEHAJ\ncN3sHSLi8MzX5wExL+pKUGLUgQtzF0qNOvAV+baVHHXg+tC2kqMOnIc2lR514Dy0qeSog+nHck+e\n9JrLXDV+xy6ldCIiLgOuZxqKV6WUbouIV05/nN4DvDgiXgUcA/4R+NWm2x1KqVEHvn3etpKjDjxQ\nt6n0qAPnoU2lRx04D20ZQ9SBLwS2pfSoA4iAAwem68OhQ0PvjXZq5Rq7lNKngKfsuO3dM1+/E3hn\nG9saUslRB7593qbSow48cWvLGKIOfOGnLWOIOvBEvg1jiTrweNGGMUTdtu3jhWGXn1b+QHkNSo86\ncGFuyxiiDpyHNowl6sAXftowlqgD14emxhR14Dw0NaaoA48XOTPsljCGqAMX5jaMJerAV+SbGlPU\ngetDU2OKOnAemhhb1IHz0MTYog6ch5wZdguMJerAJ2JTY4o6cB6aGFvUgfPQxNiiDpyHdY0x6sAX\nAtc1xqgD14ecGXZ7GFPUgQtzE2OLOnBhXtcYow68xm5dY4w68HixjrFGHXi8WMdYow48XuTMsJtj\nbFEHLszrGmPUgfOwjrFGHXjNxDrGGnXg+rCqMUcdOA+rGnPUgfOQM8NuF2OMOvCJuI6xRh04D6sa\nc9SB87CqMUcdOA+rGHvUgfOwirFHHfhCYM4Mux3GGnXgwryqMUcd+FGrVYw96sD1YRVjjzpwHpZV\nQ9SBx4tl1RB14PqQM8NuxpijDlyYVzH2qAMX5mXVEHXgNRPLqiHqwOPFMmqJOvB4sYxaog48XuTM\nsNsy9qgDF+Zl1RB14Dwso5aoAz9as4xaog5cHxapKerAeVikpqgD5yFnhh11RB34RFxGLVEHzsMi\nNUUdOA+L1BR14DzspbaoA+dhL7VFHfhCYM6qD7taog5cmBepKerAj1rtpbaoA9eHvdQWdeA8zFNj\n1IHHi3lqjDpwfchZ1WFXU9SBC/Neaos6cGGep8aoA6+ZmKfGqAOPF7upNerA48Vuao068HiRs1bC\nLiKeFxG3R8TXIuJ1c+7ztog4GhE3R8Q5bWy3idqiDlyY56kx6sB52E2tUQfOw25qjTpwHnaqOerA\nedip5qgD5yFnjcMuIvYB7wAuAJ4OXBoRT91xnwuBJ6WUngy8Eriy6XabqDHqwCfibmqNOnAedqo5\n6sBrJnaqOerA9WFW7VEHzsOs2qMOPF7krI137M4DjqaU7kwpHQOuAS7acZ+LgA8ApJQ+C5wSEYdb\n2PbKao06cGHeqeaoAz9qNav2qAPXh1m1Rx04D9uMuimPF1NG3ZTrQ77aCLvTgbtmvr9767a97nPP\nLvfpXM1RBy7Ms2qPOnBh3mbUTXnNxJRRN+Xxwqib5fHCqJtV+/Hi5Em4+urpv3NzYOgd2M3GxsYD\nX08mEyaTSePHTAn+/u/rjTpwYd5m1E05D0bdLOfBqJtV+zwYdQ9V+zwYdQ9V8zycPAmvehV85Svw\nwhfCIx7R3mNvbm6yubnZ6DHaCLt7gDNnvj9j67ad93nCgvs8YDbs2hIBb3lL6w9blJqfiNuMugfV\nPg9G3UPVfs2EUfdQNa8PRt3D1TwPRt3D1Xq8mI26T3yi3aiDh7+ZdeTIkZUfo42PYt4EnB0RZ0XE\nIeAS4Lod97kOeAlARDwTuD+ldF8L29YKal6YwajbqeaPWhl1D1fz+mDUPVyt82DU7a7W44VRt7sa\n14edUffjPz70Hu2u8Tt2KaUTEXEZcD3TULwqpXRbRLxy+uP0npTSJyLi+RHxdeAHwMuablerq3Vh\nBqNuNzUuzGDUzVPrNRNG3e5qXB+MuvkOHoQf/nDoveiXUTdfbceLUqIOWrrGLqX0KeApO257947v\nL2tjW1pfjQdqMOrmqXEejLr5apwHo26+2l4INOr2Vtv6YNTtraZ5KCnqoKU/UK4y1PRE3GbUzVfb\nPBh1e6vtmgmjbm81rQ9G3WI1zYNRt1gtx4vSog4Mu6rUtDCDUbdITa/IG3WL1bQ+GHWL1TIPRt1y\navnonVG3nBrWhxKjDgy7qtR0Im/ULVbDwgxG3bJqOXEz6pZTw/pg1C2vhndojLrljf14UWrUgWFX\nlRoO1GDULauGeTDqllfDPBh1yxv7C4FG3WrGvj4YdasZ8zyUHHVg2FVlzE/EbUbd8sY+D0bdasb+\nirxRt5oxrw9G3erGPA9G3erGerwoPerAsKvKmBdmMOpWNeZX5I261Y15fTDqVjfWeTDq1jPWeTDq\n1jPGeRhD1IFhV5XtJ2JKQ+9J+4y61Y1xYQajbl1jvWbCqFvPGNcHo259Y3wh0Khb39iOF2OJOjDs\nqrJvH+zfD8ePD70n7TLq1jPWEzejbj1jnAejbn1jO5E36poZ2/pg1DUzpnkYU9SBYVedMT0Zwahr\nYmyzYNQ1M7ZrJoy6Zsa0Phh1zY1pHoy65sYyD2OLOjDsqjOWJyMYdU2N6RV5o665Ma0NRl1zY5kH\no64dY5kHo64dY3ghcIxRB4ZddcayOBt1zR04ACdOlH/NpVHXjrFcM2HUtWMMxwqjrj1jeCHQqGtP\n6ceLsUYdGHbVGcPibNS1I2IadyWfvBl17RnDibxR157SjxVGXbtKXx+MunaVPA9jjjqAA03+44g4\nFfhvwFnAHcCvpJS+t8v97gC+B5wEjqWUzmuyXa2v5CcjGHVt256HQ4eG3pPVGXXtKv2jNUZdu0o+\nVhh17St5Hoy69pU6D2OPOmj+jt3lwKdTSk8BPgO8fs79TgKTlNIzjLphlfpkBKOuC6XOg1HXvlJn\nAYy6LpQ6D0ZdN0qdB6OuGyW+EFhD1EHzsLsIeP/W1+8HLp5zv2hhW2pBqYuzUdeNEj9uZdR1Y//+\n6f+3J04MvSerMeq6UeKxwqjrTonHCqOuO6VdY1dL1EHz2HpcSuk+gJTSt4B5p1gJuCEiboqIVzTc\nphoocXE26rpT2smbUdet0ubBqOtOaccKo65bpa0NRl23SpqHmqIOlrjGLiJuAA7P3sQ01N64y93n\n/X69Z6WU7o2IxzINvNtSSjfO2+bGxsYDX08mEyaTyaLd1JJKejKCUde1kubBqOve9jz86I8OvSeL\nGXXdKm1tMOq6VdI8GHXdK2UeSou6zc1NNjc3Gz3GwrBLKZ0/72cRcV9EHE4p3RcRPwH87ZzHuHfr\n39+OiGuB84Clwk7tKuXJCEZdH0qZB6OuH6VcN2HUdW97bUhp+ht0c2XU9aOUY4VR148SjhWlRR08\n/M2sI0eOrPwYTT+KeR3w0q2vfx346M47RMQjIuJRW18/EngucGvD7WpNpSzORl0/Svi4lVHXnxKu\nmzDq+rFv3/SfnK+5NOr6U8KxwqjrT+7HihKjri1Nw+7NwPkR8VXgl4A3AUTE4yPi41v3OQzcGBFf\nBP4S+FhK6fqG29WaSlicjbr+5B76Rl2/cp8Ho65fOR8vjLp+5b42GHX9ynkeao46aPh37FJK3wH+\n1S633wu8YOvrbwDnNNmO2pPzkxGMur7lPA9GXf9yngejrn+5zoNR179cZwGMuiHkOg+1Rx34Jwiq\nk+uTEYy6IeQ6D0bdMHK9bsKoG0aO64NRN4yDB+H48en//zkx6oaR47HCqJsy7CqT44EajLqh5PhR\nK6NuODleN2HUDSe344VRN5wIOHAgr3kw6oaT27HCqHuQYVeZHE/kjbrh5HjiZtQNJ7d5MOqGldM8\nGHXDy2kejLph5TQLRt1DGXaVyenJCEbd0HKaB6NueDnNg1E3vFxeCDTq8pDL+mDUDS+XWTDqHs6w\nq0wuT0Yw6nKQyzwYdXnI5boJoy4POawPRl0+cpgHoy4P+/dPn5tD/jkUo253hl1lcliYwajLRQ6v\nyBt1+cjhugmjLh9DHy+MurwMvT4YdfmIGHZ9MOrmM+wqk8OJvFGXjxxO3Iy6fAw9D0ZdXoacB6Mu\nP0O+o2/U5Weo9cGo25thV5mhT9yMurwMfeJm1OVlyHkw6vIz1AuBRl2ehlofjLo8DTEPRt1ihl1l\nhjxxM+ryM9Q8GHV5GuoVeaMuT0OsD0ZdvoaYB6MuX30fL4y65Rh2lRnqRN6oy9MQr8gbdfka4hoa\noy5ffR8vjLq89T0PRl3e+jxeGHXLM+wqM0TYGXX5GuLEzajLV9/zYNTlrc95MOry1+cLgUZd/vpa\nH4y61Rh2len7HRqjLm99n7gZdXnrcx6Muvz1dbww6srQ1/pg1JWhj3kw6lbXKOwi4sURcWtEnIiI\nc/e43/Mi4vaI+FpEvK7JNtVMnyduRl3++poHo64MfV0zYdSVoY/1wagrRx/zYNSVo+t5MOrW0/Qd\nu1uAFwJ/Nu8OEbEPeAdwAfB04NKIeGrD7WpNfZ3IG3Vl6OMVeaOuHH1cM2HUlaPr44VRV5au58Go\nK0uX5w9G3foahV1K6asppaNA7HG384CjKaU7U0rHgGuAi5psV+vrI+yMunL0ceJm1JWj63kw6srS\n5TwYdeXp8kTeqCtPV+uDUddMH9fYnQ7cNfP93Vu3aQBdv0Nj1JWl6xM3o64sXc6DUVeero4XRl2Z\nulofjLoydTEPRl1zBxbdISJuAA7P3gQk4A0ppY91sVMbGxsPfD2ZTJhMJl1spkpdnrgZdeXpah6M\nujJ1dY2dUVemLtYHo65cXcyDUVeutufBqIPNzU02NzcbPcbCsEspnd9oC3APcObM92ds3TbXbNip\nXV2dyBt1ZerqxM2oK1MX19gZdeVqe30w6srW9jwYdWVr8x19o25q55tZR44cWfkx2vwo5rzr7G4C\nzo6IsyLiEHAJcF2L29UKujiRN+rK1fZHrYy6srW9Phh1ZWtzHoy68rV5vDDqytfW+mDUtavpnzu4\nOCLuAp4JfDwiPrl1++Mj4uMAKaUTwGXA9cCXgWtSSrc1222tq+0TeaOubG2fuBl1ZWtzHoy68rV1\nvDDqxqGt9cGoG4c25sGoa9/Cj2LuJaX0EeAju9x+L/CCme8/BTylybbUjjZP3Iy68rU1D0bdOLQ1\nD0bdOLQxD0bdeLQxD0bdeDSdB6OuG338VkxlpK0TN6NuHNo6cTPqxqGNd2iMuvFouj4YdePSdB6M\nunFpcrww6rpj2FWmjRN5o248mp7IG3Xj0nR9MOrGpck8GHXj0+R4YdSNz7rrg1HXLcOuMk1P5I26\ncWl64mbUjUuTeTDqxmfd44VRN07rrg9G3TitMw9GXfcMu8o0OXEz6sZn3Xkw6sZp3Xkw6sZpnXkw\n6sZrnXkw6sZr1Xkw6vph2FVm3RM3o26c1j1xM+rGaZ13aIy68Vp1fTDqxm3VeTDqxm2V44VR1x/D\nrjLrnMgbdeO16om8UTduq64PRt24rTIPRt34rXK8MOrGb9n1wajrl2FXmVVP5I26cVv1xM2oG7dV\n5sGoG79l58Goq8Oy82DU1WGZeTDq+mfYVWaVEzejbvxWOXEz6sZv2Xkw6uqwzAuBRl09llkfjLp6\nLJoHo24Yhl1llj1xM+rqsMw8GHX1WOZE3qirx6L1wairy6J5MOrqstfxwqgbjmFXmWVO5I26eiw6\nkTfq6rJofTDq6rLXPBh19Tl4cP7xwqirz7z1wagblmFXmUUn8kZdXRaduBl1ddlrHoy6+sybB6Ou\nTocO7T4PRl2ddlsfjLrhGXaV2evEzairz14nbkZdfebNg1FXp91eCDTq6rXb+mDU1WvnPBh1eWgU\ndhHx4oi4NSJORMS5e9zvjoj4q4j4YkR8rsk21cy8Ezejrk67zYNRV6/dTuSNunrtXB+MurrtnAej\nrm6zxwujLh8HGv73twAvBN694H4ngUlK6bsNt6eGDh6E48enB+iI6W1GXb12nsgbdXXbeeJm1NVt\ndh6MOs3Og1Gn7Xkw6vLSKOxSSl8FiNhOhLkCP/aZhQjYv3/6ZDx0yKir3c4TN6OubrPzYNRpex6M\nOsGDLwQadYIHf5mOUZeXvmIrATdExE0R8Yqetqk5ti+ANuo0e+Jm1Gl7How6wYMn8kadYLo+/PVf\nG3WaOngQPvxhoy43C9+xi4gbgMOzNzENtTeklD625HaelVK6NyIeyzTwbksp3TjvzhsbGw98PZlM\nmEwmS25Gy9henC++2Kir3fYrbkadYHoif//9Rp2mDh6EL31pOhdGnX7kR+Bv/gb+6I+MOsETnwgX\nXABXX23UtWVzc5PNzc1GjxEppcY7EhH/C3htSukLS9z3CuD/ppTeOufnqY190nyPecz0gH355UZd\n7VKCffvgZ3/WqBN873vw6EfDlVcadYLvfhd+67fg7W836jS9Pv+WW+AZzxh6T6Q6RAQppUWXuz1E\n01+e8pALr0MzAAAFNklEQVTt73pjxCOAfSml70fEI4HnAkda3K5WdNpp8Ju/adRpes3l7/4uXHaZ\nUSc45RT45jfhJ39y6D1RDk49dfrujARw4IBRJ+Wu0Tt2EXEx8HbgMcD9wM0ppQsj4vHAH6SUXhAR\nPwVcy/TjmweAq1NKb9rjMX3HrmPHjk3fsZMkSZKUn3XesWvlo5htMuwkSZIk1WydsPNPEEiSJElS\n4Qw7SZIkSSqcYSdJkiRJhTPsJEmSJKlwhp0kSZIkFc6wkyRJkqTCGXaSJEmSVDjDTpIkSZIKZ9hJ\nkiRJUuEMO0mSJEkqnGEnSZIkSYUz7CRJkiSpcI3CLiLeEhG3RcTNEfHhiPgXc+73vIi4PSK+FhGv\na7JNSXvb3NwcehekovkckprxOSQNo+k7dtcDT08pnQMcBV6/8w4RsQ94B3AB8HTg0oh4asPtSprD\nA6rUjM8hqRmfQ9IwGoVdSunTKaWTW9/+JXDGLnc7DziaUrozpXQMuAa4qMl2JUmSJEkPavMau98A\nPrnL7acDd818f/fWbZIkSZKkFkRKae87RNwAHJ69CUjAG1JKH9u6zxuAc1NKL9rlv38RcEFK6d9v\nff9vgfNSSr89Z3t775AkSZIkjVxKKVa5/4ElHvD8vX4eES8Fng88Z85d7gHOnPn+jK3b5m1vpf8B\nkiRJklS7pr8V83nAfwR+OaX0/+bc7Sbg7Ig4KyIOAZcA1zXZriRJkiTpQU2vsXs78Cjghoj4QkS8\nCyAiHh8RHwdIKZ0ALmP6GzS/DFyTUrqt4XYlSZIkSVsWXmMnSZIkScpbm78Vc20R8eKIuDUiTkTE\nuTt+9vqIOLr1h9CfO9Q+SiWJiCsi4u6td9K/sPWxaUkLRMTzIuL2iPhaRLxu6P2RShMRd0TEX0XE\nFyPic0Pvj5S7iLgqIu6LiC/N3HZqRFwfEV+NiP8ZEacs81hZhB1wC/BC4M9mb4yInwF+BfgZ4ELg\nXRHhL1eRlvPWlNK5W/98auidkXIXEfuAdwAXAE8HLo2Ipw67V1JxTgKTlNIzUkrnDb0zUgHex/S4\nM+ty4NMppacAnwFev8wDZRF2KaWvppSOMv1TCrMuYnpN3vGU0h3AUaZ/8FzSYr4IIq3mPOBoSunO\nlNIx4BqmxyFJywsyOb+USpBSuhH47o6bLwLev/X1+4GLl3ms3J94O/+4+T34x82lZV0WETdHxHuX\nfQtfqtzOY87deMyRVpWY/lK9myLiFUPvjFSox6WU7gNIKX0LeNwy/9HCv2PXlmX+0Lmk5e31nALe\nBfznlFKKiN8H3gr8u/73UpJUmWellO6NiMcyDbzbtt6RkLS+pX7bZW9ht+gPnc9xD/CEme/3/OPm\nUk1WeE79AeCLJ9Ji9wBnznzvMUdaUUrp3q1/fzsirmX6EWfDTlrNfRFxOKV0X0T8BPC3y/xHOX4U\nc/a6oOuASyLiUET8FHA24G9YkhbYWgS2/Wvg1qH2RSrITcDZEXFWRBwCLmF6HJK0hIh4REQ8auvr\nRwLPxeOPtIzg4Q300q2vfx346DIP0ts7dnuJiIuZ/rHzxwAfj4ibU0oXppS+EhEfAr4CHAP+Q/IP\n70nLeEtEnMP0t5PdAbxy2N2R8pdSOhERlwHXM33h86qU0m0D75ZUksPAtRGRmJ5jXp1Sun7gfZKy\nFhEfBCbAoyPim8AVwJuA/x4RvwHcyfSvBCx+LDtJkiRJksqW40cxJUmSJEkrMOwkSZIkqXCGnSRJ\nkiQVzrCTJEmSpMIZdpIkSZJUOMNOkiRJkgpn2EmSJElS4f4/xGrQkKV4OCIAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1036a93c8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "angle_actuel = np.linspace(-3*np.pi, 3*np.pi, 300)\n",
+    "angle_actuel_ = np.mod(angle_actuel + np.pi/2, np.pi) - np.pi/2\n",
+    "fig, ax = plt.subplots(figsize=(15, 3))\n",
+    "_ = ax.plot(angle_actuel, angle_actuel_)"
    ]
   },
   {
